cleaned up folder structure and grouped dependencies

--- a/ms-ui-myportfolio/src/App.css
+++ b/ms-ui-myportfolio/src/App.css
@@ -1,5 +1,10 @@
+body {
+  font-family: 'Open Sans', sans-serif;
+}
+
 .App {
   text-align: center;
+  min-height: 100vh;
 }
 
 .App-logo {
@@ -36,3 +41,13 @@
     transform: rotate(360deg);
   }
 }
+
+
+/* .open-sans-<uniquifier> {
+  font-family: "Open Sans", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: <weight>;
+  font-style: normal;
+  font-variation-settings:
+    "wdth" 100;
+} */
